--- a/inji-web/src/locales/pt.json
+++ b/inji-web/src/locales/pt.json
@@ -61,36 +61,36 @@
       "buttontext":"Clique aqui"
     },
     "Login": {
-    "login-title": "Entrar",
-    "login-description":"Faça login com sua conta ou continue como convidado para acessar suas credenciais.",
-    "login-note":"Alguns recursos podem ser limitados no modo convidado.",
-    "logging-in": "Entrando",
-    "login-google": "Continuar com o Google",
-    "login-guest": "Continuar como convidado"
+    "loginTitle": "Entrar",
+    "loginDescription":"Faça login com sua conta ou continue como convidado para acessar suas credenciais.",
+    "loginNote":"Alguns recursos podem ser limitados no modo convidado.",
+    "loggingIn": "Entrando",
+    "loginGoogle": "Continuar com o Google",
+    "loginGuest": "Continuar como convidado"
     },
     "LoginFailedModal": {
-      "failure-message": "Falha no login",
-      "failure-description": "Sua tentativa de login falhou. Verifique suas credenciais e tente novamente",
+      "failureMessage": "Falha no login",
+      "failureDescription": "Sua tentativa de login falhou. Verifique suas credenciais e tente novamente",
       "retry": "Tentar novamente"
     }
   },
   "PinPage": {
     "submit": "Enviar",
     "submitting": "Enviando",
-    "set-passcode": "Definir código de acesso",
-    "enter-passcode": "Digite o código de acesso",
-    "confirm-passcode": "Confirmar código de acesso",
-    "reset-passcode": "Redefinir código de acesso",
-    "set-passcode-description": "Defina seu código de acesso para começar",
-    "enter-passcode-description": "Digite seu código de 6 dígitos",
-    "passcode-warning": "Certifique-se de lembrar a senha para login futuro",
+    "setPasscode": "Definir código de acesso",
+    "enterPasscode": "Digite o código de acesso",
+    "confirmPasscode": "Confirmar código de acesso",
+    "resetPasscode": "Redefinir código de acesso",
+    "setPasscodeDescription": "Defina seu código de acesso para começar",
+    "enterPasscodeDescription": "Digite seu código de 6 dígitos",
+    "passcodeWarning": "Certifique-se de lembrar a senha para login futuro",
     "error": {
-      "wallet-not-found-error": "Nenhuma carteira encontrada. Crie uma.",
-      "pin-length-error": "O PIN deve ter 6 dígitos.",
-      "passcode-mismatch-error": "Os PINs não coincidem.",
-      "create-wallet-error": "Falha na criação da carteira.",
-      "incorrect-pin-error": "PIN incorreto.",
-      "fetch-wallets-error": "Erro ao buscar carteiras."
+      "walletNotFoundError": "Nenhuma carteira encontrada. Crie uma.",
+      "pinLengthError": "O PIN deve ter 6 dígitos.",
+      "passcodeMismatchError": "Os PINs não coincidem.",
+      "createWalletError": "Falha na criação da carteira.",
+      "incorrectPinError": "PIN incorreto.",
+      "fetchWalletsError": "Erro ao buscar carteiras."
     }
   },
   "IssuersPage": {
@@ -168,12 +168,12 @@
   "AuthorizationPage": {
     "error": {
       "code": {
-        "invalid_redirect_uri": "Acesso negado!",
-        "invalid_client": "Acesso negado!"
+        "invalidRedirectUri": "Acesso negado!",
+        "invalidClient": "Acesso negado!"
       },
       "message": {
-        "invalid_redirect_uri": "As credenciais não podem ser compartilhadas porque não conseguimos identificar quem as solicitou. Entre em contato com o administrador para obter ajuda.",
-        "invalid_client": "As credenciais não podem ser compartilhadas porque não conseguimos identificar quem as solicitou. Entre em contato com o administrador para obter ajuda."
+        "invalidRedirectUri": "As credenciais não podem ser compartilhadas porque não conseguimos identificar quem as solicitou. Entre em contato com o administrador para obter ajuda.",
+        "invalidClient": "As credenciais não podem ser compartilhadas porque não conseguimos identificar quem as solicitou. Entre em contato com o administrador para obter ajuda."
       }
     }
   },
