--- a/inji-web/src/locales/en.json
+++ b/inji-web/src/locales/en.json
@@ -61,36 +61,36 @@
       "buttontext":"Click Here"
     },
     "Login":{
-      "login-title":"Log In",
-      "login-description":"Log in with your account or continue as a guest to access your credentials.",
-      "login-note":"Some features may be limited in guest mode.",
-      "logging-in":"Logging in",
-      "login-google":"Continue with Google",
-      "login-guest":"Continue as Guest"
+      "loginTitle":"Log In",
+      "loginDescription":"Log in with your account or continue as a guest to access your credentials.",
+      "loginNote":"Some features may be limited in guest mode.",
+      "loggingIn":"Logging in",
+      "loginGoogle":"Continue with Google",
+      "loginGuest":"Continue as Guest"
     },
     "LoginFailedModal":{
-      "failure-message":"Login Failed",
-      "failure-description":"Your login attempt has failed. Please check your credentials and try again",
+      "failureMessage":"Login Failed",
+      "failureDescription":"Your login attempt has failed. Please check your credentials and try again",
       "retry":"Retry"
     }
   },
   "PinPage":{
     "submit":"Submit",
     "submitting":"Submitting",
-    "set-passcode":"Set Passcode",
-    "enter-passcode":"Enter Passcode",
-    "confirm-passcode":"Confirm Passcode",
-    "reset-passcode":"Reset Passcode",
-    "set-passcode-description":"Set your passcode to get started",
-    "enter-passcode-description":"Enter your 6 digit passcode",
-    "passcode-warning":"Make sure you remember the password for future login",
+    "setPasscode":"Set Passcode",
+    "enterPasscode":"Enter Passcode",
+    "confirmPasscode":"Confirm Passcode",
+    "resetPasscode":"Reset Passcode",
+    "setPasscodeDescription":"Set your passcode to get started",
+    "enterPasscodeDescription":"Enter your 6 digit passcode",
+    "passcodeWarning":"Make sure you remember the password for future login",
     "error":{
-      "wallet-not-found-error":"Wallet not found",
-      "pin-length-error":"Please Enter 6 digits in the Pin",
-      "passcode-mismatch-error":"Pin did not match",
-      "create-wallet-error":"Wallet creation unsuccessful",
-      "incorrect-pin-error":"Incorrect pin entered",
-      "fetch-wallets-error":"Error in fetching wallets"
+      "walletNotFoundError":"Wallet not found",
+      "pinLengthError":"Please Enter 6 digits in the Pin",
+      "passcodeMismatchError":"Pin did not match",
+      "createWalletError":"Wallet creation unsuccessful",
+      "incorrectPinError":"Incorrect pin entered",
+      "fetchWalletsError":"Error in fetching wallets"
     }
   },
   "IssuersPage": {
@@ -134,35 +134,35 @@
         "subTitle": "session is not valid or session is completed"
       },
       "verification": {
-        "err_missing_issuancedate": {
+        "errMissingIssuanceDate": {
           "title": "Invalid Issuance Date",
           "subTitle": "Issuance date is invalid or set in the future. Check for a valid date."
         },
-        "err_invalid_issuancedate": {
+        "errInvalidIssuanceDate": {
           "title": "Invalid Issuance Date",
           "subTitle": "Issuance date is invalid or set in the future. Check for a valid date."
         },
-        "err_issuance_date_is_future_date": {
+        "errIssuanceDateIsFutureDate": {
           "title": "Invalid Issuance Date",
           "subTitle": "Issuance date is invalid or set in the future. Check for a valid date."
         },
-        "err_invalid_expirationdate": {
+        "errInvalidExpirationDate": {
           "title": "Invalid Expiration Date",
           "subTitle": "Expiration date is invalid. Check for a valid date"
         },
-        "err_vc_expired": {
+        "errVcExpired": {
           "title": "Invalid Expiration Date",
           "subTitle": "Expiration date is invalid. Check for a valid date"
         },
-        "err_invalid_validfrom": {
+        "errInvalidValidFrom": {
           "title": "Invalid Start Date",
           "subTitle": "Date is invalid or set in the future. Check for a valid date."
         },
-        "err_valid_from_is_future_date": {
+        "errValidFromIsFutureDate": {
           "title": "Invalid Start Date",
           "subTitle": "Date is invalid or set in the future. Check for a valid date."
         },
-        "err_invalid_validuntil": {
+        "errInvalidValidUntil": {
           "title": "Invalid End Date",
           "subTitle": "Date is invalid. Check for a valid date"
         }
@@ -176,12 +176,12 @@
   "AuthorizationPage": {
     "error": {
       "code": {
-        "invalid_redirect_uri":"Access Denied!",
-        "invalid_client": "Access Denied!"
+        "invalidRedirectUri":"Access Denied!",
+        "invalidClient": "Access Denied!"
       },
       "message": {
-        "invalid_redirect_uri":"Credentials cannot be shared because we couldn’t identify who requested them. Please contact the admin for help.",
-        "invalid_client": "Credentials cannot be shared because we couldn’t identify who requested them. Please contact the admin for help."
+        "invalidRedirectUri":"Credentials cannot be shared because we couldn’t identify who requested them. Please contact the admin for help.",
+        "invalidClient": "Credentials cannot be shared because we couldn’t identify who requested them. Please contact the admin for help."
       }
     }
   },
