[INJIWEB-1513] fix the styles of dashboard header and add the translations for the profile dropdown menu
Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -318,6 +318,11 @@
       "emptyScreen": {
         "title": "لم يتم تخزين أي بيانات اعتماد!"
       }
+    },
+    "ProfileDropdown": {
+      "profile": "حساب تعريفي",
+      "faq": "التعليمات",
+      "logout": "تسجيل الخروج"
     }
   }
 }
