--- a/inji-web/src/locales/en.json
+++ b/inji-web/src/locales/en.json
@@ -318,6 +318,11 @@
       "emptyScreen": {
         "title": "No Credentials Stored!"
       }
+    },
+    "ProfileDropdown": {
+      "profile": "Profile",
+      "faq": "FAQ",
+      "logout": "Logout"
     }
   }
 }
