--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -318,6 +318,11 @@
       "emptyScreen": {
         "title": "कोई क्रेडेंशियल संग्रहीत नहीं!"
       }
+    },
+    "ProfileDropdown": {
+      "profile": "प्रोफ़ाइल",
+      "faq": "अक्सर पूछे जाने वाले प्रश्न",
+      "logout": "लॉग आउट"
     }
   }
 }
