--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -318,6 +318,11 @@
       "emptyScreen": {
         "title": "எந்தச் சான்றுகளும் சேமிக்கப்படவில்லை!"
       }
+    },
+    "ProfileDropdown": {
+      "profile": "சுயவிவரம்",
+      "faq": "அடிக்கடி கேட்கப்படும் கேள்விகள்",
+      "logout": "வெளியேறு"
     }
   }
 }
