--- a/inji-web/src/locales/pt.json
+++ b/inji-web/src/locales/pt.json
@@ -309,6 +309,11 @@
       "emptyScreen": {
         "title": "Nenhuma credencial armazenada!"
       }
+    },
+    "ProfileDropdown": {
+      "profile": "Perfil",
+      "faq": "Perguntas frequentes",
+      "logout": "வெளியேறு"
     }
   }
 }
