[INJIWEB-1533] rename reset passcode to change passcode and update the translations for same in all locale files and update the padding and margins of text in pin page
Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -82,7 +82,7 @@
     "setPasscode": "تعيين رمز المرور",
     "enterPasscode": "أدخل رمز المرور",
     "confirmPasscode": "تأكيد رمز المرور",
-    "resetPasscode": "إعادة تعيين رمز المرور",
+    "forgotPasscode": "نسيت رمز المرور",
     "setPasscodeDescription": "قم بتعيين رمز المرور للبدء",
     "enterPasscodeDescription": "أدخل رمز المرور المكون من 6 أرقام",
     "passcodeWarning": "تأكد من تذكر كلمة المرور لتسجيل الدخول في المستقبل",
