--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -82,7 +82,7 @@
     "setPasscode": "ಪಾಸ್‌ಕೋಡ್ ಹೊಂದಿಸಿ",
     "enterPasscode": "ಪಾಸ್‌ಕೋಡ್ ನಮೂದಿಸಿ",
     "confirmPasscode": "ಪಾಸ್‌ಕೋಡ್ ದೃಢೀಕರಿಸಿ",
-    "resetPasscode": "ಪಾಸ್‌ಕೋಡ್ ಮರುಹೊಂದಿಸಿ",
+    "forgotPasscode": "ಪಾಸ್‌ಕೋಡ್ ಮರೆತಿದ್ದಾರೆ",
     "setPasscodeDescription": "ಪ್ರಾರಂಭಿಸಲು ನಿಮ್ಮ ಪಾಸ್‌ಕೋಡ್ ಹೊಂದಿಸಿ",
     "enterPasscodeDescription": "ನಿಮ್ಮ 6 ಅಂಕಗಳ ಪಾಸ್‌ಕೋಡ್ ನಮೂದಿಸಿ",
     "passcodeWarning": "ಭವಿಷ್ಯದಲ್ಲಿ ಲಾಗಿನ್ ಮಾಡಲು ಪಾಸ್‌ಕೋಡ್ ನೆನಪಿಡಿ",
