[INJIWE-1520]: Create Home Button,Resize Picture in Header
Signed-off-by: Kamlesh <kamleshbisht012@gmail.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -355,6 +355,12 @@
       "profile": "حساب تعريفي",
       "faq": "التعليمات",
       "logout": "تسجيل الخروج"
+    },
+    "ProfilePage": {
+      "title": "ملفي الشخصي",
+      "homeTitle": "الصفحة الرئيسية",
+      "fullName": "الاسم الكامل",
+      "emailAddress": "عنوان البريد الإلكتروني"
     }
   }
 }
