--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -355,6 +355,12 @@
       "profile": "प्रोफ़ाइल",
       "faq": "अक्सर पूछे जाने वाले प्रश्न",
       "logout": "लॉग आउट"
+    },
+    "ProfilePage": {
+      "title": "मेरा प्रोफ़ाइल",
+      "homeTitle": "मुखपृष्ठ",
+      "fullName": "पूरा नाम",
+      "emailAddress": "ईमेल पता"
     }
   }
 }
