--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -355,6 +355,12 @@
       "profile": "சுயவிவரம்",
       "faq": "அடிக்கடி கேட்கப்படும் கேள்விகள்",
       "logout": "வெளியேறு"
+    },
+    "ProfilePage": {
+      "title": "என் சுயவிவரம்",
+      "homeTitle": "முகப்பு",
+      "fullName": "முழு பெயர்",
+      "emailAddress": "மின்னஞ்சல் முகவரி"
     }
   }
 }
